--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gen_types": "npx supabase gen types typescript --local > lib/database.types.ts"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-checkbox": "^1.1.1",
