--- a/chess-openings/package.json
+++ b/chess-openings/package.json
@@ -7,11 +7,15 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "populate_db": "tsx scripts/populate_db.ts",
+    "test_insert": "tsx scripts/test_insert.ts"
   },
   "dependencies": {
     "@types/chess.js": "^0.13.7",
+    "axios": "^1.6.7",
     "chess.js": "^1.2.0",
+    "csv-parse": "^5.5.3",
     "react": "^19.1.0",
     "react-chessboard": "^4.7.3",
     "react-dom": "^19.1.0"
@@ -23,10 +27,11 @@
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^16.0.0",
-    "typescript": "~5.8.3",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.2",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^5.1.4"
   }
 }
